--- a/plants.html
+++ b/plants.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Issakhanova_Gaukhar_FIP.</title>
+<title>Issakhanova_Gaukhar_FIP</title>
 <link href="css/main.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
